--- a/MobileAutomation/pom.xml
+++ b/MobileAutomation/pom.xml
@@ -12,6 +12,16 @@
 			<url>https://jitpack.io</url>
 		</repository>
 	</repositories>
+	
+	<dependencies>
+		<dependency>
+			<groupId>cglib</groupId>
+			<artifactId>cglib</artifactId>
+			<version>2.2</version>
+		</dependency>
+	
+	</dependencies>
+	
 
 
 </project>
