--- a/MobileAutomation/.classpath
+++ b/MobileAutomation/.classpath
@@ -43,6 +43,15 @@
 	<classpathentry kind="lib" path="E:/jars/Selenium Jars only/client-combined-3.141.59.jar"/>
 	<classpathentry kind="lib" path="E:/jars/Selenium Jars only/client-combined-3.141.59-sources.jar"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
-	<classpathentry kind="lib" path="E:/java-client-4.1.2.jar"/>
+	<classpathentry kind="lib" path="E:/cglib-2.2.jar"/>
+	<classpathentry kind="lib" path="E:/jars/new jars/gson-2.8.0.jar"/>
+	<classpathentry kind="lib" path="E:/jars/new jars/guava-23.0.jar"/>
+	<classpathentry kind="lib" path="E:/jars/new jars/httpclient-4.5.3.jar"/>
+	<classpathentry kind="lib" path="E:/jars/new jars/httpcore-4.4.6.jar"/>
+	<classpathentry kind="lib" path="E:/jars/new jars/jna-4.1.0.jar"/>
+	<classpathentry kind="lib" path="E:/jars/new jars/jna-platform-4.1.0.jar"/>
+	<classpathentry kind="lib" path="E:/java-client-6.1.0.jar"/>
+	<classpathentry kind="lib" path="E:/commons-lang3-3.4.jar"/>
+	<classpathentry kind="lib" path="E:/asm-3.3.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
